[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaac"
version = "0.1.0"
description = "YAAC (Yet Another Agentic Coder) - An AI coding assistant powered by Pydantic AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.20",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "halo>=0.0.31",
]

[project.optional-dependencies]
openai   = ["pydantic-ai[openai]>=0.0.20"]
google   = ["pydantic-ai[google]>=0.0.20"]
groq     = ["pydantic-ai[groq]>=0.0.20"]
mistral  = ["pydantic-ai[mistral]>=0.0.20"]
ollama   = ["pydantic-ai[openai]>=0.0.20"]
all      = ["pydantic-ai[openai,google,groq,mistral]>=0.0.20"]

[project.scripts]
yaac = "yaac.main:main"

[tool.hatch.build.targets.wheel]
packages = ["yaac"]
