[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaacai"
version = "0.1.0"
description = "YAAC (Yet Another Agentic Coder) - An AI coding assistant powered by Pydantic AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lucca Buffara", email = "luccabuffara@gmail.com" },
]
keywords = ["ai", "coding-assistant", "cli", "llm", "agent", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic-ai[anthropic]>=0.0.20",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "halo>=0.0.31",
]

[project.urls]
Homepage = "https://github.com/LuccaBuffara/yaac"
Repository = "https://github.com/LuccaBuffara/yaac"

[project.optional-dependencies]
openai   = ["pydantic-ai[openai]>=0.0.20"]
google   = ["pydantic-ai[google]>=0.0.20"]
groq     = ["pydantic-ai[groq]>=0.0.20"]
mistral  = ["pydantic-ai[mistral]>=0.0.20"]
ollama   = ["pydantic-ai[openai]>=0.0.20"]
all      = ["pydantic-ai[openai,google,groq,mistral]>=0.0.20"]

[project.scripts]
yaac = "yaac.main:main"

[tool.hatch.build.targets.wheel]
packages = ["yaac"]
